@@ -2793,7 +2793,6 @@
               <javacArg>--release</javacArg>
               <javacArg>${java.version}</javacArg>
               <javacArg>-Xlint:all,-serial,-path,-try</javacArg>
-              <javacArg>-proc:full</javacArg>
             </javacArgs>
           </configuration>
         </plugin>
